    Closes: #693951
  * Add dpkg --ctrl-tarfile forwarding command for dpkg-deb.
  * Disable dependency checks on dpkg-buildpackage -S -nc.
  * Make dependency checks fatal for dpkg-buildpackage -S.
  * Update amd64 GNU cpu regex in cputable to match amd64 too, in addition
    to x86_64. This is required for FreeBSD.
  * Use badusage() instead of ohshit() for command-line errors.

  * Perl modules:
    - Rename and deprecate Dpkg::Gettext _g function with new g_.
    - Assume in Dpkg::Arch that the abitable is always present, and bump
      libdpkg-perl Depends on dpkg to 1.16.3, the version introducing the file.
    - Remove support for GCC_TARGET environment variable from Dpkg::Shlibs.
      This was a temporary workaround for very old gcc toolchains. See #453267.
    - Prefer multiarch paths to multilib ones in Dpkg::Shlibs.
      Thanks to Helmut Grohne <helmut@subdivi.de>. Closes: #772184
    - Enable sub-second timestamps in Dpkg::Source::Patch by using Time::HiRes.
    - Use TMPDIR instead of manually setting DIR on tempfile() call in
      Dpkg::Source::Package::V2.
    - Switch Dpkg::Checksums from using checksum programs to the more portable
      Digest modules. Obsolete the 'program' property, and add a 'name' one.
    - Add support for $DEFAULT_TEXT_DOMAIN to Dpkg::Gettext, so that the Dpkg
      perl modules can always produce localized messages.
  * Test suite:
    - Check perl code compilation, warnings and strictness.
    - Fix dpkg-divert unit test to work on BSD «rm -rf» that cannot traverse
      directories with mode 000.
    - Fix dpkg-divert unit test to work when there is no /dev/full.
  * Build system:
    - Bump gettext version to 0.19:
      + Use --add-location=file in msgmerge and xgettext commands.
      + Use --porefs=noline for po4a command.
    - Wrap file references in man page PO files with po4a --porefs=wrap.
    - Fix support for cross-building dpkg:
      + Assume a working C99 snprintf on SUS >= v3.