@@ -21,6 +21,8 @@
 use strict;
 use warnings;
 
+use File::Copy;
+
 use Dpkg ();
 use Dpkg::Arch qw(get_host_arch);
 use Dpkg::Package;
@@ -281,7 +283,12 @@ unless ($quiet) {
     # Compare template symbols files before and after
     my $before = File::Temp->new(TEMPLATE=>'dpkg-gensymbolsXXXXXX');
     my $after = File::Temp->new(TEMPLATE=>'dpkg-gensymbolsXXXXXX');
-    $ref_symfile->output($before, package => $oppackage, template_mode => 1);
+    if ($ref_symfile->{file}) {
+        # If the original template symbols file exists, use it instead of
+        # trying to regenerate it, as the output might differ in sort order
+        # or similar.
+        copy($ref_symfile->{file}, $before);
+    }
     $symfile->output($after, package => $oppackage, template_mode => 1);
 
     seek $before, 0, 0;
